# borkfolio

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommands.sh
app/: db.py  main.py
app/jinja2/: templating.py
app/models/: BggSearch.py  BoardGame.py  Pet.py
app/routers/: boardgames.py  html.py  pets.py
app/static/css/: bootstrap-override.css
app/static/js/: boardgames.js
app/templates/: about.html.j2  base.html.j2  boardgames.html.j2  index.html.j2
src/: pyproject.toml
src/app/: db.py  main.py
src/app/jinja2/: templating.py
src/app/models/: BggCollection.py  BggCollectionItem.py  BggSearch.py  BggSearchResultItem.py  BggSearchResultSet.py  BoardGame.py
src/app/routers/: about.py  bgg.py  board_games.py  boardgames.py  html.py  index.py
src/app/static/js/: boardgames.js
src/app/templates/: about.html  boardgames.html  index.html  index.html.j2  timeline.html
src/tests/: test_mock_get_suggestions.py  test_mock_suggest_board_game.py
tests/: test_api_get_collection.py  test_api_suggest_board_game_invalid_id.py  test_home.py  test_html_about.py  test_html_boardgames.py  test_mock_get_suggestions.py  test_mock_suggest_board_game.py  test_search_board_games.py
