[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.0.288"
fastapi = "0.70.0"
requests = "2.26.0"
uvicorn = "0.15.0"
python-dotenv = "0.19.1"
aiofiles = "0.7.0"
python-multipart = "0.0.5"
jinja2 = "3.1.2"
markdown = "3.3.4"
pytest = "7.4.2"
pydantic-xml = "1.0.0"
mongita = "^1.2.0"
lxml = "^4.9.3"
pytest-asyncio = "0.20.3"
better-profanity = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
